force-app/main/default/objects/MenuAccessLowData__c/MenuAccessLowData__c.object-meta.xml
<CustomObject>
    <label>Menu Access Low Data</label>
    <nameField>
        <label>Menu Access Low Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Access Low Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>