force-app/main/default/objects/MenuAccessLowData__c/fields/AccessLocale__c.field-meta.xml
<CustomField>
    <fullName>AccessLocale__c</fullName>
    <label>Access Locale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>