force-app/main/default/objects/MenuAccessLowData__c/fields/AccessTime__c.field-meta.xml
<CustomField>
    <fullName>AccessTime__c</fullName>
    <label>Access Time</label>
    <type>Date</type>
</CustomField>