force-app/main/default/objects/MenuAccessLowData__c/fields/AppName__c.field-meta.xml
<CustomField>
    <fullName>AppName__c</fullName>
    <label>App Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>