force-app/main/default/objects/MenuAccessLowData__c/fields/BrowserName__c.field-meta.xml
<CustomField>
    <fullName>BrowserName__c</fullName>
    <label>Browser Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>