force-app/main/default/objects/MenuAccessLowData__c/fields/Client_IP__c.field-meta.xml
<CustomField>
    <fullName>Client_IP__c</fullName>
    <label>Client IP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>