force-app/main/default/objects/MenuAccessLowData__c/fields/DeviceModel__c.field-meta.xml
<CustomField>
    <fullName>DeviceModel__c</fullName>
    <label>Device Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>