force-app/main/default/objects/MenuAccessLowData__c/fields/DevicePlatform__c.field-meta.xml
<CustomField>
    <fullName>DevicePlatform__c</fullName>
    <label>Device Platform</label>
    <length>50</length>
    <type>Text</type>
</CustomField>