force-app/main/default/objects/MenuAccessLowData__c/fields/OS_Name__c.field-meta.xml
<CustomField>
    <fullName>OS_Name__c</fullName>
    <label>OS Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>