force-app/main/default/objects/MenuAccessLowData__c/fields/PageAppName__c.field-meta.xml
<CustomField>
    <fullName>PageAppName__c</fullName>
    <label>Page App Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>