force-app/main/default/objects/MenuAccessLowData__c/fields/PageEntityType__c.field-meta.xml
<CustomField>
    <fullName>PageEntityType__c</fullName>
    <label>Page Entity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>