force-app/main/default/objects/MenuAccessLowData__c/fields/PageURL__c.field-meta.xml
<CustomField>
    <fullName>PageURL__c</fullName>
    <label>Page URL</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>