force-app/main/default/objects/MenuAccessLowData__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>